xee-xpath-compiler/tests/snapshots/xpath__default_position_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position() + 1\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: SourceSpan(
            0,
            17,
        ),
    },
)
