xee-xpath-compiler/tests/snapshots/xpath__element_namespace_default.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml_default_ns(r#\"<doc xmlns=\"http://example.com\"><a/></doc>\"#,\n    \"doc / local-name()\", \"http://example.com\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "doc",
                ),
            ),
        ),
    },
)
