xee-xpath-compiler/tests/snapshots/xpath__every_quantifier_empty_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"every $x in () satisfies $x eq 5\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
