xee-xpath-compiler/tests/snapshots/xpath__every_quantifier_expr_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"every $x in (1, 2, 3) satisfies $x lt 5\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
