xee-xpath-compiler/tests/snapshots/xpath__every_quantifier_nested_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"every $x in (2, 3, 4), $y in (1, 2) satisfies $x gt $y\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
