xee-xpath-compiler/tests/snapshots/xpath__fn_root_absent.snap
---
source: xee-xpath-compiler/tests/xpath.rs
expression: "run(\"fn:root()\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: Some(
            SourceSpan(
                0,
                0,
            ),
        ),
    },
)
