xee-xpath-compiler/tests/snapshots/xpath__function_closure_with_multiple_variables_arguments.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function() { let $x := 3 return function($y) { $x - $y } }()(1)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ),
    },
)
