xee-xpath-compiler/tests/snapshots/xpath__generate_id.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b/><c/></doc>\"#, \"generate-id(doc/a)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "id_0_2",
                ),
            ),
        ),
    },
)
