xee-xpath-compiler/tests/snapshots/xpath__if.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"if (1) then 2 else 3\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ),
    },
)
